<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/App_Info"
        android:textColor="#ff1c0bff"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/Operator_name"/>

        <EditText android:id="@+id/Operator_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/Name_Hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/Vehicle_Number"/>

        <EditText android:id="@+id/Vehicle_Number"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="16dp"
                  android:layout_marginRight="16dp"
                  android:hint="@string/Vehicle_Hint"/>

        <TextView android:id="@+id/shift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/Shift"/>

        <RadioGroup android:id="@+id/myRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:checkedButton="@+id/day_shift">

            <RadioButton android:id="@+id/day_shift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_shift"/>

            <RadioButton android:id="@+id/night_shift"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/night_shift"/>
        </RadioGroup>

    </LinearLayout>

    <Button android:id="@+id/button_safety_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/safety_next"/>

</LinearLayout>

